Use modern java, refine javadoc
Signed-off-by: subhramit <subhramit.bb@live.in>